--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Kopsis Home</title>
+    <title>Kopsis Page 3</title>
     <style>
         * {
             margin: 0;
@@ -325,19 +325,32 @@
         <div class="hero">
             <img src="asset/header.png" alt="hero" class="hero">
             <div class="herotext">
-                <p class="hero-heading">KOPERASI SMKN 1 BANYUWANGI</p>
+                <p class="hero-heading">TENTANG KAMI</p>
                 <p class="hero-text">Mitra Terpercaya Mewujudkan<br>SDM Koperasi Profesional, Tangguh, dan Berjati Diri</p>
             </div>
         </div>
         <div class="content">
             <section class="container my-5" style="margin: 50px;">
-                <h2 class="text-center">Kopsis Sekolah: Membangun Karakter dan Kepemimpinan Siswa</h2>
-                <p>Kopsis sekolah, atau yang lebih dikenal dengan istilah organisasi siswa, merupakan wadah bagi para pelajar untuk mengembangkan diri, berlatih kepemimpinan, dan berkontribusi dalam lingkungan sekolah. Melalui kopsis, siswa tidak hanya belajar tentang akademik, tetapi juga tentang pentingnya kerja sama, tanggung jawab, dan keterampilan sosial.</p>
-                <p>Salah satu tujuan utama dari kopsis sekolah adalah untuk membentuk karakter siswa. Dalam organisasi ini, siswa diajarkan untuk saling menghargai, mendengarkan pendapat orang lain, dan bekerja dalam tim. Kegiatan-kegiatan yang diadakan, seperti seminar, pelatihan, dan proyek sosial, memberikan kesempatan bagi siswa untuk berlatih berkomunikasi dan memecahkan masalah secara kolektif.</p>
-                <p>Selain itu, kopsis juga berfungsi sebagai sarana untuk menyalurkan minat dan bakat siswa. Melalui berbagai kegiatan ekstrakurikuler, siswa dapat mengeksplorasi hobi mereka, baik dalam bidang seni, olahraga, maupun sains. Hal ini tidak hanya meningkatkan keterampilan individu, tetapi juga memperkuat rasa percaya diri dan semangat berprestasi.</p>
-                <p>Kopsis sekolah juga berperan penting dalam menciptakan lingkungan yang inklusif dan mendukung. Dengan melibatkan semua siswa, organisasi ini membantu membangun rasa kebersamaan dan solidaritas di antara mereka. Kegiatan sosial yang diadakan, seperti bakti sosial atau penggalangan dana, mengajarkan siswa tentang empati dan kepedulian terhadap sesama.</p>
-                <p>Dalam era digital saat ini, kopsis sekolah juga harus beradaptasi dengan perkembangan teknologi. Penggunaan media sosial dan platform online dapat dimanfaatkan untuk memperluas jangkauan kegiatan dan meningkatkan partisipasi siswa. Dengan cara ini, kopsis dapat menjadi lebih relevan dan menarik bagi generasi muda.</p>
-                <p>Secara keseluruhan, kopsis sekolah memiliki peran yang sangat penting dalam pengembangan siswa. Melalui pengalaman berorganisasi, siswa tidak hanya belajar tentang kepemimpinan dan kerja sama, tetapi juga membangun karakter yang kuat dan siap menghadapi tantangan di masa depan. Dengan dukungan dari guru dan sekolah, kopsis sekolah dapat menjadi fondasi yang kokoh bagi generasi penerus yang berkualitas.</p>
+                <div class="container">
+                    <h1>Tentang Kami</h1>
+                    <p>Selamat datang di Koperasi, tempat di mana kebersamaan dan kesejahteraan anggota menjadi prioritas utama...</p>
+                    <br>
+                    <h2>Visi Kami</h2>
+                    <p>Menjadi koperasi yang mandiri, profesional, dan inovatif dalam mendukung pertumbuhan ekonomi anggota serta masyarakat sekitar.</p>
+                    <br>
+                    <h2>Misi Kami</h2>
+                    <ul>
+                        <li>Memberikan layanan keuangan dan usaha yang transparan, adil, dan berkelanjutan.</li>
+                        <li>Mendorong kesejahteraan anggota melalui berbagai program dan layanan yang bermanfaat.</li>
+                        <li>Mengembangkan kerja sama dengan berbagai pihak untuk memperluas peluang usaha dan ekonomi.</li>
+                        <li>Meningkatkan literasi keuangan dan keterampilan usaha bagi anggota koperasi.</li>
+                    </ul>
+                    <br>
+                    <p>Sejak didirikan,Koperasi telah berkomitmen untuk mengedepankan prinsip demokrasi, transparansi, dan keadilan dalam setiap kegiatannya. Dengan dukungan penuh dari anggota, kami terus berkembang dan berinovasi untuk menciptakan manfaat yang lebih besar bagi semua.
+                        Bergabunglah bersama kami dan menjadi bagian dari gerakan ekonomi berbasis kebersamaan!</p>
+                    
+                    <p class="footer">Bergabunglah bersama kami dan menjadi bagian dari gerakan ekonomi berbasis kebersamaan!</p>
+                </div>
             </section>
         </div>
     </main>
