--- a/page2.html
+++ b/page2.html
@@ -315,10 +315,10 @@
         <img src="asset/logo-smk.png" alt="logo" class="logo">
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="about.html">Tentang Kami</a></li>
-            <li><a href="faq.html">Faq</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page2.html">Gallery</a></li>
+            <li><a href="page3.html">Tentang Kami</a></li>
+            <li><a href="page4.html">Faq</a></li>
         </ul>
     </nav>
     <main>
