--- a/page4.html
+++ b/page4.html
@@ -290,17 +290,17 @@
             <center>
                 <div class="accordion">Apa saja pelayanan koperasi sekolah?</div>
                 <div class="panel">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ducimus facilis voluptatum ea aut animi amet laborum? Ipsam labore dignissimos corporis hic quam aspernatur architecto, magni rerum eaque sunt! Adipisci sit sunt ex error! Itaque repellat dolor vero deleniti placeat voluptatibus rerum eaque! Porro quos ducimus et explicabo alias minus sequi nostrum numquam ab eum repudiandae illum quisquam distinctio officiis dolorum praesentium asperiores, esse doloribus unde consequatur repellendus atque. Ullam ipsam fugit ratione? Repellendus expedita reiciendis cumque, inventore ut provident perspiciatis ab harum veritatis accusamus voluptates quis atque enim delectus officiis, ullam reprehenderit esse labore! Labore sed quasi ducimus sequi.</p>
+                    <p>Menyediakan kebutuhan pokok siswa seperti alat tulis, seragam sekolah, dan buku pelajaran dan lain lain.</p>
                 </div>
                 <br><br>
                 <div class="accordion">Apa saja manfaat koperasi sekolah?</div>
                 <div class="panel">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ducimus facilis voluptatum ea aut animi amet laborum? Ipsam labore dignissimos corporis hic quam aspernatur architecto, magni rerum eaque sunt! Adipisci sit sunt ex error! Itaque repellat dolor vero deleniti placeat voluptatibus rerum eaque! Porro quos ducimus et explicabo alias minus sequi nostrum numquam ab eum repudiandae illum quisquam distinctio officiis dolorum praesentium asperiores, esse doloribus unde consequatur repellendus atque. Ullam ipsam fugit ratione? Repellendus expedita reiciendis cumque, inventore ut provident perspiciatis ab harum veritatis accusamus voluptates quis atque enim delectus officiis, ullam reprehenderit esse labore! Labore sed quasi ducimus sequi.</p>
+                    <p>Memenuhi fasilitas sekolah.</p>
                 </div>
                 <br><br>
-                <div class="accordion">Apa saja pelayanan Fo?</div>
+                <div class="accordion">koperasi buka jam berapa saja?</div>
                 <div class="panel">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ducimus facilis voluptatum ea aut animi amet laborum? Ipsam labore dignissimos corporis hic quam aspernatur architecto, magni rerum eaque sunt! Adipisci sit sunt ex error! Itaque repellat dolor vero deleniti placeat voluptatibus rerum eaque! Porro quos ducimus et explicabo alias minus sequi nostrum numquam ab eum repudiandae illum quisquam distinctio officiis dolorum praesentium asperiores, esse doloribus unde consequatur repellendus atque. Ullam ipsam fugit ratione? Repellendus expedita reiciendis cumque, inventore ut provident perspiciatis ab harum veritatis accusamus voluptates quis atque enim delectus officiis, ullam reprehenderit esse labore! Labore sed quasi ducimus sequi.</p>
+                    <p>Koperasi buka saat jam sekolah.</p>
                 </div>
             </center>
         </div>
